adding changes for video understanding

--- a/sample_codes/vision_llms/simple_vision_ollama.ipynb
+++ b/sample_codes/vision_llms/simple_vision_ollama.ipynb
@@ -142,6 +142,41 @@
     "\n",
     "query_chain"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can pass the user text in following way and you can have system prompt as well on top\n",
+    "\n",
+    "'''\n",
+    "conversation = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\n",
+    "                \"type\": \"image\", \n",
+    "                \"image\": {\"image_path\": image_path}\n",
+    "            },\n",
+    "            {\n",
+    "                \"type\": \"text\", \n",
+    "                \"text\": \"Please parse all the text in the document, from left to right, from top to bottom. Please add line breaks in appropriate places.\"},\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
