--- a/sample_codes/vision_llms/video_analysis/video_repos.ipynb
+++ b/sample_codes/vision_llms/video_analysis/video_repos.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "https://github.com/byjlw/video-analyzer/ -> Analyze the video, but seems slightly slow\n",
     "\n",
-    "https://github.com/DAMO-NLP-SG/VideoLLaMA3/tree/main -> Finetuned LLAMA model for video"
+    "https://github.com/DAMO-NLP-SG/VideoLLaMA3/tree/main -> Finetuned LLAMA model for video\n",
+    "\n",
+    "https://github.com/yunlong10/Awesome-LLMs-for-Video-Understanding?tab=readme-ov-file#-vid-llm-instruction-tuning  -> Plathora of resources for video analysis platform"
    ]
   }
  ],
