--- a/sample_codes/unsloth_finetuning/ollama_fine_tuning.ipynb
+++ b/sample_codes/unsloth_finetuning/ollama_fine_tuning.ipynb
@@ -58,6 +58,99 @@
     "    # token = \"hf_...\", # use one if using gated models like meta-llama/Llama-2-7b-hf\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trl import SFTTrainer\n",
+    "from transformers import TrainingArguments\n",
+    "from unsloth import is_bfloat16_supported\n",
+    "\n",
+    "trainer = SFTTrainer(\n",
+    "    model = model,\n",
+    "    tokenizer = tokenizer,\n",
+    "    train_dataset = dataset,\n",
+    "    dataset_text_field = \"text\",\n",
+    "    max_seq_length = max_seq_length,\n",
+    "    dataset_num_proc = 2,\n",
+    "    packing = False, # Can make training 5x faster for short sequences.\n",
+    "    args = TrainingArguments(\n",
+    "        per_device_train_batch_size = 2,\n",
+    "        gradient_accumulation_steps = 4,\n",
+    "        warmup_steps = 5,\n",
+    "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
+    "        max_steps = 60,\n",
+    "        learning_rate = 2e-4,\n",
+    "        fp16 = not is_bfloat16_supported(),\n",
+    "        bf16 = is_bfloat16_supported(),\n",
+    "        logging_steps = 1,\n",
+    "        optim = \"adamw_8bit\",\n",
+    "        weight_decay = 0.01,\n",
+    "        lr_scheduler_type = \"linear\",\n",
+    "        seed = 3407,\n",
+    "        output_dir = \"outputs\",\n",
+    "        report_to = \"none\", # Use this for WandB etc\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_template = \"\"\"Below are some instructions that describe some tasks. Write responses that appropriately complete each request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{INPUT}\n",
+    "\n",
+    "### Response:\n",
+    "{OUTPUT}\"\"\"\n",
+    "\n",
+    "from unsloth import apply_chat_template\n",
+    "\n",
+    "dataset = apply_chat_template(\n",
+    "    dataset,   \n",
+    "    tokenizer=tokenizer,\n",
+    "    chat_template=chat_template,\n",
+    "    # default_system_message = \"You are a helpful assistant\", << [OPTIONAL]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unsloth import to_sharegpt\n",
+    "dataset = to_sharegpt(\n",
+    "    dataset,\n",
+    "    merged_prompt=\"{instruction}[[\\nYour input is:\\n{input}]]\",\n",
+    "    output_column_name=\"output\",\n",
+    "    conversation_extension=3, \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unsloth.chat_templates import get_chat_template\n",
+    "\n",
+    "tokenizer = get_chat_template(\n",
+    "    tokenizer,\n",
+    "    chat_template = \"chatml\", # Supports zephyr, chatml, mistral, llama, alpaca, vicuna, vicuna_old, unsloth\n",
+    "    mapping = {\"role\" : \"from\", \"content\" : \"value\", \"user\" : \"human\", \"assistant\" : \"gpt\"}, # ShareGPT style\n",
+    "    map_eos_token = True, # Maps <|im_end|> to </s> instead\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
